[package]
name = "motion-canvas-rs"
version = "0.1.5"
edition = "2021"
authors = ["Paulo Ubirajara"]
description = "A high-performance vector animation engine inspired by Motion Canvas, built on Vello and Typst."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PauloUbirajara/motion-canvas-rs"
repository = "https://github.com/PauloUbirajara/motion-canvas-rs"
keywords = ["animation", "graphics", "vello", "typst", "vector"]
categories = ["graphics", "rendering", "multimedia"]
exclude = [".github/*", "media/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
font-kit = "0.14.3"
glam = "0.25"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skrifa = "0.42.0"
vello = "0.2.1"
winit = "0.29"
image = { version = "0.24", optional = true }
rayon = { version = "1.11.0", optional = true }
resvg = { version = "0.45", optional = true }
rodio = { version = "0.17", optional = true }
similar = { version = "2.6.0", optional = true }
syntect = { version = "5.3.0", optional = true }
typst = { version = "0.14.2", optional = true }
usvg = { version = "0.45", optional = true }

[features]
default = []
code = ["dep:syntect", "dep:similar"]
math = ["dep:typst"]
image = ["dep:image"]
export = ["dep:image", "dep:rayon"]
svg = ["dep:resvg", "dep:usvg"]
full = ["code", "math", "image", "export", "svg", "audio"]
audio = ["dep:rodio"]

[[example]]
name = "advanced_flow"
required-features = ["math", "code", "image", "svg"]

[[example]]
name = "audio_demo"
required-features = ["audio"]

[[example]]
name = "code_advanced"
required-features = ["code"]

[[example]]
name = "code_animation"
required-features = ["code"]

[[example]]
name = "color_interpolation"

[[example]]
name = "easing_scope"

[[example]]
name = "explainer"
required-features = ["image", "code", "svg"]

[[example]]
name = "export"
required-features = ["export"]

[[example]]
name = "getting_started"

[[example]]
name = "group_animation"

[[example]]
name = "images"
required-features = ["image", "svg"]

[[example]]
name = "math_animation"
required-features = ["math"]

[[example]]
name = "math_code"
required-features = ["math", "code"]

[[example]]
name = "polygon"

[[example]]
name = "shapes"

[[example]]
name = "signals"
